[修改]获取会员资料

--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.94",
-	"appid": "touristappid",
+	"appid": "wx27bc7841e3a39bdd",
 	"projectname": "mina-shop",
 	"condition": {
 		"search": {
