--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.94",
-	"appid": "wx27bc7841e3a39bdd",
+	"appid": "wx406660535ad74efc",
 	"projectname": "mina-shop",
 	"condition": {
 		"search": {
