[微信支付]成功

--- a/app.json
+++ b/app.json
@@ -13,6 +13,7 @@
     "pages/member/aboutus/aboutus",
     "pages/order/list/list",
     "pages/order/submit/submit",
+    "pages/order/result/result",
     "pages/address/list/list"
   ],
   "window":{
